# autonomous-claude-code-builder

./: .gitignore  001-acli-v2-build.md  ARCHITECTURE_V2.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SUMMARY.md  alr-claude.md  pyproject.toml  pytest.ini
ai/diagrams/: README.md
docs/: API.md  ARCHITECTURE.md  ORCHESTRATOR.md  QUICKSTART.md  browser-automation.md
evidence/: pg1-cumulative.txt  pg2-cumulative.txt  pg3-cumulative.txt  pg4-cumulative.txt  pg5-cumulative.txt  vg1.1-models.txt  vg1.2-events.txt  vg1.3-router.txt  vg1.4-context.txt  vg2.1-agents.txt  vg2.2-orchestrator.txt  vg2.3-skills.txt  vg2.4-sessions.txt  vg3.1-mocks.txt  vg3.2-engine.txt  vg3.3-platforms.txt  vg4.1-widgets.txt  vg4.2-tui.txt  vg5.1-cli.txt  vg5.1-help.txt  vg6.1-imports.txt
evidence/final/: 01-init.txt  02-status.txt  03-router.txt  04-context.txt  05-validation.txt  06-mocks.txt  07-sessions.txt  08-imports.txt  VERDICT.txt
examples/: test_orchestrator.py
plans/260318-2351-acli-v2-shannon/: gate-protocol.md  plan.md
plans/reports/: INDEX-textual-research.md  researcher-260318-2350-alr-validation-design.md  researcher-260318-2350-claude-agent-sdk-api.md  researcher-260318-2350-textual-tui-api-summary.md  researcher-260318-2350-textual-tui-api.md  researcher-260318-2350-v1-codebase-deep-analysis.md
src/acli/: __init__.py  __main__.py  cli.py  cli_v2.py
src/acli/agents/: __init__.py  factory.py  (+1 more)
tests/: run_e2e.sh  test_security.py
tests/functional/: 00-setup.sh  01-init-project.sh  02-enhance-spec.sh  03-config-management.sh  04-skill-discovery.sh  05-status-check.sh  06-security-validation.sh  07-tui-validation.sh  99-cleanup.sh  README.md
(+81 files in other folders)
